correctif desktop final

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </nav>
     </div>
     <div class="news">
-        <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+        <div class="img_n">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+        </div>
         <div class="content">
             <h1>Le brillant avenir du web 3.0 ?</h1>
             <div class="s_content">
