change mobile flex to grid

--- a/index.html
+++ b/index.html
@@ -7,23 +7,9 @@
     <title>Initiation pré processeur CSS</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body> <!-- margin 20px content 350px // margin 120px content 1200 -->
-    <!-- 350*100/390 = % -->
-    <!-- font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 21px; -->
-
+<body> 
     <div class="header">
         <h1 class="logo">W.</h1>
-        <!-- font-family: 'Gravitas One';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 60px;
-        line-height: 76px;
-        letter-spacing: -10px; -->
-        
         <nav>
             <div class="mobile"></div>
             <a href="">Home</a>
@@ -41,24 +27,24 @@
             <h1>Le brillant avenir du web 3.0 ?</h1>
             <div class="s_content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ullamcorper sodales pharetra. Morbi porta vel diam eu ultrices. Sed eget ipsum iaculis, rutrum tellus et, lobortis nibh. </p>
-                <button>Lire la suite</button> <!-- background: #BBACC1;border-radius: 50px; -->
+                <button>Lire la suite</button>
             </div>
         </div>
     </div>
-    <div class="actu-l"> <!-- background: #333333;  -->
-        <h1>Nouveautés</h1> <!-- color: #BBACC1; -->
+    <div class="actu-l"> 
+        <h1>Nouveautés</h1> 
         <div class="content">
-            <h4>Lorem Ipsum Dolor</h4> <!-- text-transform: capitalize;color: #F1DEDE; -->
+            <h4>Lorem Ipsum Dolor</h4> 
+            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+            <hr>
+        </div>
+        <div class="content">
+            <h4>Lorem Ipsum Dolor</h4>
             <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
         </div>
         <hr>
         <div class="content">
-            <h4>Lorem Ipsum Dolor</h4> <!-- text-transform: capitalize;color: #F1DEDE; -->
-            <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
-        </div>
-        <hr>
-        <div class="content">
-            <h4>Lorem Ipsum Dolor</h4> <!-- text-transform: capitalize;color: #F1DEDE; -->
+            <h4>Lorem Ipsum Dolor</h4>
             <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
         </div>
     </div>
@@ -66,7 +52,7 @@
         <div class="actu-i">
             <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
             <div class="content">
-                <h2>01</h2>
+                <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
                 <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. </p>
             </div>
@@ -74,7 +60,7 @@
         <div class="actu-i">
             <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
             <div class="content">
-                <h2>02</h2>
+                <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
                 <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. </p>
             </div>
@@ -82,7 +68,15 @@
         <div class="actu-i">
             <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
             <div class="content">
-                <h2>03</h2>
+                <h2></h2>
+                <h4>Lorem Ipsum Dolor</h4>
+                <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. </p>
+            </div>
+        </div>
+        <div class="actu-i">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <div class="content">
+                <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
                 <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. </p>
             </div>
