ajout anim button

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1 class="logo">W.</h1>
         <nav>
             <div class="mobile"></div>
-            <a href="">Home</a>
-            <a href="">Nouveau</a>
-            <a href="">Populaire</a>
-            <a href="">Tendance</a>
-            <a href="">Catégories</a>
+            <a href="#">Home</a>
+            <a href="#">Nouveau</a>
+            <a href="#">Populaire</a>
+            <a href="#">Tendance</a>
+            <a href="#">Catégories</a>
         </nav>
     </div>
     <div class="news">
         <div class="img_n">
-            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="meeting">
         </div>
         <div class="content">
             <h1>Le brillant avenir du web 3.0 ?</h1>
@@ -50,7 +50,7 @@
     </div>
     <div class="actu-s">
         <div class="actu-i">
-            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="meeting">
             <div class="content">
                 <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="actu-i">
-            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="meeting">
             <div class="content">
                 <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="actu-i">
-            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="meeting">
             <div class="content">
                 <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="actu-i">
-            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="">
+            <img src="./assets/img/purse-g87912151b_1280.jpg" alt="meeting">
             <div class="content">
                 <h2></h2>
                 <h4>Lorem Ipsum Dolor</h4>
